# tri-mcp

./: .env.example  AGENT_CONTEXT.md  Cargo.toml  Dockerfile  RING.md  funnel-smoke.sh  package.json
TASKS/: AGENT-QUICK-START.md  CONSTITUTION.md  POLICY-perplexity-auth-setup.md  TZ-perplexity-browser-mcp-integration.md  perplexity-auth-test.md
browser-tools-mcp/: mcp-server.ts  package.json
browser-tools-server/: browser-connector.ts
chrome-extension/: background.js  devtools.js  panel.html  panel.js
config/: mcp-perplexity.json
docs/: PERPLEXITY_MCP_SETUP.md  SR02-MCP-RVR-002.md
memory/: task_rust_rewrite.md
rings/SR-00/: Cargo.toml
rings/SR-00/src/: main.rs
rings/SR-01/: Cargo.toml
rings/SR-01/src/: lib.rs
rings/SR-02/: Cargo.toml
rings/SR-02/src/: lib.rs  main.rs
rings/SR-03/: Cargo.toml
rings/SR-03/src/: lib.rs
rings/SR-04/: Cargo.toml  RING.md  TASK.md
src/: lib.rs
