[package]
name = "tri-mcp-sr00"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
base64 = { workspace = true }
