[package]
name = "tri-mcp-sr03"
version.workspace = true
edition.workspace = true
description = "SR-03 — 14 MCP Tools"

[lib]
name = "tri_mcp_sr03"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
tri-mcp-sr01 = { path = "../SR-01" }
