[package]
name = "tri-mcp-sr04"
version.workspace = true
edition.workspace = true
description = "SR-04 — Tailscale Funnel (Silver, Level 04)"

[dependencies]
serde = { workspace = true }
uuid = { workspace = true }
tokio = { version = "1", features = ["full"] }
anyhow = { workspace = true }
tri-mcp-sr00 = { path = "../SR-00" }
